# forelietohelp

./: AVL_trees.h  CMakeLists.txt  RealValueFunctions.cpp  RealValueFunctions.h  dont_include.txt  dspotify25b1.cpp  dspotify25b1.h  main.out  main25b1.cpp  node.h  playlist.cpp  playlist.h  run_tests.py  song.cpp  song.h  test20.diff  test40.diff  wet1util.h
tests/: test0.in  test0.res  test10.in  test10.res  test20.in  test20.out  test20.res  test30.in  test30.res  test40.in  test40.out  test40.res
